@@ -1,5 +1,6 @@
 lldpd (0.9.7)
   * Changes:
+    + Attach remote TTL to port instead of chassis.
     + JSON support is now built-in and unconditionally enabled. Use
       --enable-json0 to keep the pre-0.9.2 json-c format.
     + When logging to syslog and daemonizing, don't log to stderr.
